--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
-distribute
-Fabric
-Flask
-Flask-Cache
-Flask-Classy
-Flask-Script
-Flask-Injector
-
-raven
-mailchimp
-py_email_validation
-
-dealer
-
-unittest2
-mock
-nose
-coverage
-
-gevent
-gunicorn
+Fabric==1.8.0
+Flask==0.10.1
+Flask-Cache==0.12
+Flask-Classy==0.6.7
+Flask-Injector==0.3.1
+Flask-Script==0.6.3
+Jinja2==2.7.1
+MarkupSafe==0.18
+Werkzeug==0.9.4
+blinker==1.3
+coverage==3.7
+dealer==1.0.0
+distribute==0.7.3
+docopt==0.4.0
+ecdsa==0.10
+gevent==0.13.8
+greenlet==0.4.1
+gunicorn==18.0
+injector==0.7.8
+itsdangerous==0.23
+mailchimp==2.0.7
+mailsnake==1.6.2
+mock==1.0.1
+nose==1.3.0
+paramiko==1.12.0
+py-email-validation==1.0.0.3
+pycrypto==2.6.1
+raven==3.5.2
+requests==2.0.1
+simplejson==3.3.1
+unittest2==0.5.1
