--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+distribute
+
 Fabric==1.8.0
 Flask==0.10.1
 Flask-Cache==0.12
@@ -10,7 +12,7 @@ Werkzeug==0.9.4
 blinker==1.3
 coverage==3.7
 dealer==1.0.0
-distribute==0.7.3
+
 docopt==0.4.0
 ecdsa==0.10
 gevent==0.13.8
